tests/errors/semantic/blocking/TOO_MANY_ARGS.py
def f(b:'int'):
    print(b)

f(1, 2)
